--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "prettier": "^2.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "rimraf": "^3.0.2",
     "rollup": "^2.39.1",
     "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-less": "^1.1.3",
